--- a/rm94141/aula05/public/index.html
+++ b/rm94141/aula05/public/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Event Driven</title>
 </head>
 <body>
-  <noscript>Essa página precisa de javascript ativo</noscript>
-  <div id="root"></div>
+    <noscript>NEEDs JS</noscript>
+    <div id="root"></div>
 </body>
 </html>
